* troff: Handles input characters according to LC_CTYPE now in combination
  with the new font setup. In a UTF-8 locale, most characters that are
  present in standard, Expert, and Symbol PostScript fonts are supported;
  otherwise, a locale-specific subset of them is available.
* troff: A PostScript device with a resolution of 7200 dpi, named "7200",
  is available, and is used by default.
* dpost: The PostScript output is now expected to conform to Adobe's
  Document Structuring Conventions, version 3.0.
* troff: The ".fzoom" request allows to zoom the characters of a font.
* [nt]roff: The ".lc_ctype" request can be used to set the LC_CTYPE
  localization setting from within a document.
* troff: It is now possible to use "\[name]", where name is a character
  defined in the .afm file for the current font.
* troff: The ".tkf" request for tracking letter space has been added.
* troff: The ".fallback" request for selecting the order in which fonts
  are searched for missing characters in the current font has been added.
* troff: The ".hidechar" request hides characters from a font which are
  then searched using the fallback sequence.
* [nt]roff: Environments selected with the ".ev" command can be given
  names, and their number is no longer statically limited.
* [nt]roff: The ".evc" request copies another environment to the current
  one.
* [nt]roff: The ".chop" request deletes the last character from a macro,
  string, or diversion.
* [nt]roff: The ".return" request returns immediately from a macro.
* [nt]roff: The "\:" escape inserts an optional line break but generates
  no hyphen if the line is split.
* [nt]roff: The "\~" escape is similar to "\ " but inserts a space that
  stretches like a regular " " when the line is adjusted.
* troff/dpost: The "\X'Sync'" escape forces dpost to write position and
  font information to the generated PostScript. This is sometimes useful
  to ensure that following "\X'PS: ...'" escapes work as expected.