@@ -11,6 +11,7 @@ Release ...
   otherwise, a locale-specific subset of them is available.
 * troff: A PostScript device with a resolution of 7200 dpi, named "7200",
   is available, and is used by default.
+* troff: Support for pairwise kerning has been added.
 * dpost: The PostScript output is now expected to conform to Adobe's
   Document Structuring Conventions, version 3.0.
 * troff: The ".fzoom" request allows to zoom the characters of a font.
